# voicememowhisper

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: technical_details.md
src/voicememowhisper/: __init__.py  cli.py  config.py  metadata.py  paths.py  service.py  transcribe.py
voicememowhisper/: cli.py  config.py  metadata.py  service.py  state.py  transcribe.py  watcher.py
